--- a/YDTest/YDTest.Logic/YDTest.Logic.csproj
+++ b/YDTest/YDTest.Logic/YDTest.Logic.csproj
@@ -5,4 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\YDTest.Model\YDTest.Model.csproj" />
+  </ItemGroup>
+
 </Project>
