--- a/YDTest/src/YDTest.Api/YDTest.Api.csproj
+++ b/YDTest/src/YDTest.Api/YDTest.Api.csproj
@@ -2,13 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\YDTest.Logic\YDTest.Logic.csproj" />
   </ItemGroup>
 
 </Project>
