commit all changes

--- a/YDTest/src/YDTest.Api/appsettings.Development.json
+++ b/YDTest/src/YDTest.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=1gb_ydtest_dev;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
