--- a/YDTest/tests/YDTest.Logic.UnitTests/YDTest.Logic.UnitTests.csproj
+++ b/YDTest/tests/YDTest.Logic.UnitTests/YDTest.Logic.UnitTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -20,6 +20,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\YDTest.Logic\YDTest.Logic.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Mocks\" />
   </ItemGroup>
 
 </Project>
