--- a/YDTest/YDTest.Logic/YDTest.Logic.csproj
+++ b/YDTest/YDTest.Logic/YDTest.Logic.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\YDTest.Data\YDTest.Data.csproj" />
     <ProjectReference Include="..\YDTest.Model\YDTest.Model.csproj" />
   </ItemGroup>
 
