--- a/YDTest/src/YDTest.Api/YDTest.Api.csproj
+++ b/YDTest/src/YDTest.Api/YDTest.Api.csproj
@@ -6,14 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\YDTest.Data\YDTest.Data.csproj" />
-    <ProjectReference Include="..\..\YDTest.Logic\YDTest.Logic.csproj" />
+    <ProjectReference Include="..\YDTest.Logic\YDTest.Logic.csproj" />
+    <ProjectReference Include="..\YDTest.Data\YDTest.Data.csproj" />
   </ItemGroup>
 
 </Project>
