--- a/YDTest/src/YDTest.Api/appsettings.json
+++ b/YDTest/src/YDTest.Api/appsettings.json
@@ -6,7 +6,9 @@
     //"LogFilePath": "Logs\\log-{Date}.txt",
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "AllowedHosts": "*"
