Add fake db context

--- a/YDTest/src/YDTest.Api/appsettings.json
+++ b/YDTest/src/YDTest.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ms-sql-3.in-solve.ru;Database=1gb_ydtest;User Id=1gb_umnijdrug2;Password=075c5d5f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ms-sql-10.in-solve.ru;Database=1gb_aaydtest;User Id=1gb_umnijdrug2;Password=075c5d5f;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     //"LogFilePath": "Logs\\log-{Date}.txt",
