--- a/YDTest/src/YDTest.Api/NLog.config
+++ b/YDTest/src/YDTest.Api/NLog.config
@@ -8,18 +8,34 @@
       throwExceptions="true"
       internalLogLevel="Error" internalLogFile="c:\nlog-internal.log">
 
+  <!-- enable asp.net core layout renderers -->
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
-
+  <!-- the targets to write to -->
   <targets async="true">
-    <target xsi:type="Console" name="Console" layout="${message}"/>
-    <target xsi:type="File" name="File" fileName="log/${date:format=yyyy-MM-dd}.json" layout="${message}" encoding="utf-8"/>
+    <!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
+    <target xsi:type="Console" name="lifetimeConsole" layout="${MicrosoftConsoleLayout}" />
+    
+    <target xsi:type="File" name="File" fileName="log/${date:format=yyyy-MM-dd}.json"
+            layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" encoding="utf-8"/>
+
+    <!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
+    <target xsi:type="File" name="ownFile-web" fileName="c:\temp\nlog-AspNetCore-own-${shortdate}.log"
+            layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
   </targets>
 
+  <!-- rules to map from logger name to target -->
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="File" />
-    <logger name="*" minlevel="Debug" writeTo="Console" />
+    <!--All logs, including from Microsoft-->
+    <logger name="*" minlevel="Info" writeTo="File" />
+
+    <!--Output hosting lifetime messages to console target for faster startup detection -->
+    <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifetimeConsole, ownFile-web" final="true" />
+
+    <!--Skip non-critical Microsoft logs and so log only own logs (BlackHole) -->
+    <logger name="Microsoft.*" maxlevel="Warn" final="true" />
+    <logger name="System.Net.Http.*" maxlevel="Warn" final="true" />
   </rules>
 
 </nlog>
