--- a/YDTest/src/YDTest.Api/appsettings.Development.json
+++ b/YDTest/src/YDTest.Api/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    // "DefaultConnection": "Server=ms-sql-10.in-solve.ru;Database=1gb_aaydtest;User Id=1gb_umnijdrug2;Password=075c5d5f;TrustServerCertificate=True;MultipleActiveResultSets=true"
     "DefaultConnection": "Server=localhost;Database=1gb_ydtest_dev;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
