--- a/YDTest/src/YDTest.Common/YDTest.Common.csproj
+++ b/YDTest/src/YDTest.Common/YDTest.Common.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstractions\" />
+  </ItemGroup>
+
 </Project>
