--- a/YDTest/src/YDTest.Logic/YDTest.Logic.csproj
+++ b/YDTest/src/YDTest.Logic/YDTest.Logic.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\YDTest.Common\YDTest.Common.csproj" />
     <ProjectReference Include="..\YDTest.Data\YDTest.Data.csproj" />
     <ProjectReference Include="..\YDTest.Model\YDTest.Model.csproj" />
   </ItemGroup>
