--- a/YDTest/tests/YDTest.IntegrationsTests.Api/YDTest.IntegrationsTests.Api.csproj
+++ b/YDTest/tests/YDTest.IntegrationsTests.Api/YDTest.IntegrationsTests.Api.csproj
@@ -3,24 +3,26 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.13" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
-    <PackageReference Include="xunit.abstractions" Version="2.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.13" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\YDTest.Logic\YDTest.Logic.csproj" />
-    <ProjectReference Include="..\YDTest.Tests.Infrastructure\YDTest.Tests.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\YDTest.Data\YDTest.Data.csproj" />
   </ItemGroup>
 
 </Project>
