--- a/YDTest/tests/YDTest.Logic.UnitTests/YDTest.Logic.UnitTests.csproj
+++ b/YDTest/tests/YDTest.Logic.UnitTests/YDTest.Logic.UnitTests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
@@ -19,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\YDTest.Api\YDTest.Api.csproj" />
     <ProjectReference Include="..\..\src\YDTest.Logic\YDTest.Logic.csproj" />
     <ProjectReference Include="..\YDTest.Tests.Infrastructure\YDTest.Tests.Infrastructure.csproj" />
   </ItemGroup>
