--- a/YDTest/src/YDTest.Data/YDTest.Data.csproj
+++ b/YDTest/src/YDTest.Data/YDTest.Data.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\YDTest.Model\YDTest.Model.csproj" />
+  </ItemGroup>
+
 </Project>
